# rns-llm

./: .github_PLACEHOLDER  .gitignore  CHANGELOG_V0142_RU.md  CONTRIBUTING.md  Makefile  README.md  RELEASE_CHECKLIST_V0142_RU.md  benchmark_inference.py  model.py  pyproject.toml  requirements-ppl.txt  rns_inference.py  sample.py  setup.py  test_rns_inference.py  train.py
.github/: pull_request_template.md
benchmarks/: README.md  benchmark_adaptive_channels.py  benchmark_architecture_v013.py  benchmark_attention.py  benchmark_attention_v014.py  benchmark_concurrency.py  benchmark_cuda.py  benchmark_hybrid_from_audit.py  benchmark_hybrid_lut_v014.py  benchmark_lut_reuse.py  benchmark_moduli_sets.py  benchmark_prefill_v011.py  benchmark_qkv_fusion.py  benchmark_unified_matrix_v014.py  benchmark_v07_epilogue.py  reference_latency.py
configs/: reference.json
csrc/: bindings.cpp  hybrid_rns_extension.cu  rns_cuda.cu  v011_prefill_extension.cu  v013_architecture_extension.cu  v07_extension.cu
cuda/: CMakeLists.txt  README.md
docs/: ARCHITECTURE.md  ARCHITECTURE_LUT_EXPERIMENT_V013_RU.md  BACKEND_CONTRACT.md  CHANGELOG_V013_RU.md  CORRECTNESS_GUARDS.md  CUDA_NEXT_STEPS.md  CURATOR_KERNEL_NOTES.md  EXPERIMENTS.md  EXPERIMENT_PROTOCOL_V014_RU.md  HYBRID_ARCHITECTURE_RU.md  HYBRID_EXPERIMENT_PROTOCOL_RU.md  INTERFACES.md  MODULI_PLANS_V013.md  NSIGHT_GUIDE_V07_RU.md  NSIGHT_V014_RU.md  OPTIMIZATIONS_V03.md  OPTIMIZATIONS_V04.md  OPTIMIZATIONS_V05.md  PAPER_INTEGRATION_V013_RU.md  PPL_EXPERIMENT_V012_RU.md  PREFILL_V011_ARCHITECTURE_RU.md  PREFILL_V011_EXPERIMENT_RU.md  PROJECT_SCOPE_ALIGNMENT.md  RELEASE_V05.md  REQUIREMENTS_STATUS_V012_RU.md  REQUIREMENTS_STATUS_V013_RU.md  REQUIREMENTS_STATUS_V014_RU.md  ROADMAP_9_DAYS.md  (+5 more)
(+110 files in other folders)
