[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rns-llm"
version = "0.5.0"
description = "Research CUDA backend for RNS matrix multiplication in Transformer inference"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
transformer = [
    "transformers>=4.40",
    "datasets>=2.18",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "cuda: requires a compiled CUDA extension and an NVIDIA GPU",
]
