[build-system]
requires = ["setuptools>=68,<82", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rns-llm"
version = "0.14.2"
description = "RNS LLM full-RNS and hybrid attention, LUT, PPL, concurrency, and Nsight experiments"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
analysis = [
  "pandas>=2,<3",
  "matplotlib>=3.7",
]
transformer = [
  "transformers>=4.45,<5",
  "datasets>=2.19,<5",
  "accelerate>=0.33",
  "safetensors>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]
